panko-compiletest/src/snapshots/panko_compiletest__scope-panko__tests__cases__execute__arrays__test_multidimensional_array_length.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/arrays/test_multidimensional_array_length.c
snapshot_kind: text
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (declaration printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (function-definition
      main~1 `fn(∅: int, argv: ptr<ptr<char>>) -> int`
      (params
         main.unnamed_parameter.0~2 `int`
         argv~3 `ptr<ptr<char>>`)
      (compound-statement
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (subscript (name argv~3 `ptr<ptr<char>>`) 1)
               (lengthof `array<array<ptr<long>; 400>; 100>`)))
         (definition xs~4 `array<array<int; 27>; 42>` ∅)
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (subscript (name argv~3 `ptr<ptr<char>>`) 1)
               (lengthof (name xs~4 `array<array<int; 27>; 42>`))))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (subscript (name argv~3 `ptr<ptr<char>>`) 1)
               (lengthof (deref (name xs~4 `array<array<int; 27>; 42>`)))))
         (definition ys~5 `ptr<array<array<int; 27>; 42>>` ∅)
         (return (add (lengthof (deref (name ys~5 `ptr<array<array<int; 27>; 42>>`))) (lengthof (deref (deref (name ys~5 `ptr<array<array<int; 27>; 42>>`)))))))))

----- stderr -----
